fix(toolbar): give dropdowns a z-index of toolbar + 1

--- a/src/styles/components/toolbar/__toolbar.sass
+++ b/src/styles/components/toolbar/__toolbar.sass
@@ -21,6 +21,7 @@ uni-toolbar
     right: 0
     text-align: left
     font-size: 14px
+    z-index: #{map-get($zindex, toolbar) + 1}
 
     li
         width: 14rem
